<resources>
    <string name="app_name">instabugTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="request_type">Request Type</string>
    <string name="request_url">Request Url</string>
    <string name="enter_request_url">Enter Request Url</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
</resources>